Finalize Executive Dashboard and Robust Payment Validation System